<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/filter_activity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FilterActivity">

    <Button
        android:id="@+id/buttonOpenMaps2"
        android:layout_width="187dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/buttonOpenMaps"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <SeekBar
        android:id="@+id/seekBar"
        style="@style/Widget.AppCompat.SeekBar.Discrete"
        android:layout_width="389dp"
        android:layout_height="116dp"
        android:layout_marginBottom="68dp"
        android:max="5"
        android:progress="0"
        app:layout_constraintBottom_toTopOf="@+id/buttonOpenMaps2"
        app:layout_constraintEnd_toEndOf="@+id/buttonOpenMaps2"
        app:layout_constraintHorizontal_bias="0.059"
        app:layout_constraintStart_toStartOf="@+id/buttonOpenMaps2"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.741" />

    <TextView
        android:id="@+id/ocenaText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginBottom="4dp"
        android:text="@string/ocenaText"
        app:layout_constraintBottom_toTopOf="@+id/seekBar"
        app:layout_constraintStart_toStartOf="parent" />

    <CheckBox
        android:id="@+id/checkBox4"
        android:layout_width="256dp"
        android:layout_height="40dp"
        android:layout_marginBottom="8dp"
        android:checked="true"
        android:text="@string/radioPlener"
        app:layout_constraintBottom_toTopOf="@+id/checkBox"
        app:layout_constraintEnd_toEndOf="@+id/checkBox"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/checkBox" />

    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="256dp"
        android:layout_height="40dp"
        android:layout_marginBottom="8dp"
        android:checked="true"
        android:text="@string/radioBar"
        app:layout_constraintBottom_toTopOf="@+id/checkBox2"
        app:layout_constraintEnd_toEndOf="@+id/checkBox2"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/checkBox2" />

    <CheckBox
        android:id="@+id/checkBox2"
        android:layout_width="256dp"
        android:layout_height="40dp"
        android:layout_marginBottom="8dp"
        android:checked="true"
        android:text="@string/radioRestauracja"
        app:layout_constraintBottom_toTopOf="@+id/checkBox3"
        app:layout_constraintEnd_toEndOf="@+id/checkBox3"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/checkBox3" />

    <CheckBox
        android:id="@+id/checkBox3"
        android:layout_width="256dp"
        android:layout_height="40dp"
        android:layout_marginBottom="56dp"
        android:checked="true"
        android:text="@string/radioInne"
        app:layout_constraintBottom_toTopOf="@+id/seekBar"
        app:layout_constraintEnd_toEndOf="@+id/seekBar" />

    <TextView
        android:id="@+id/typeText"
        android:layout_width="237dp"
        android:layout_height="19dp"
        android:layout_marginBottom="8dp"
        android:text="@string/typeText"
        app:layout_constraintBottom_toTopOf="@+id/checkBox4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/checkBox4"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.982" />

    <Button
        android:id="@+id/confirmationButton"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="28dp"
        android:text="Zatwierdz"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.441"
        app:layout_constraintStart_toEndOf="@+id/buttonOpenMaps2"
        app:layout_constraintTop_toBottomOf="@+id/seekBar"
        app:layout_constraintVertical_bias="0.923" />

</androidx.constraintlayout.widget.ConstraintLayout>